ref: search and dashboard

--- a/src/_metronic/assets/sass/components/_variables.custom.scss
+++ b/src/_metronic/assets/sass/components/_variables.custom.scss
@@ -6,11 +6,19 @@
 
 // Theme colors
 // Primary
-$primary: #04c8c8;
-$primary-active: #00afaf;
+
+$primary: #000000;
+$primary-active: #424444;
 $primary-light: #dcfdfd;
 $primary-light-dark: #1c3238;
 $primary-inverse: #ffffff;
+
+
+// $primary: #04c8c8;
+// $primary-active: #00afaf;
+// $primary-light: #dcfdfd;
+// $primary-light-dark: #1c3238;
+// $primary-inverse: #ffffff;
 
 // Success
 $success: #009ef7;
