--- a/src/_metronic/assets/sass/style.scss
+++ b/src/_metronic/assets/sass/style.scss
@@ -12,7 +12,6 @@
 // Layout
 @import 'layout/layout';
 
-
 /* Add this CSS to your stylesheet or style block */
 .pdf-container {
   display: flex;
@@ -38,16 +37,56 @@
 }
 
 .justified-text::after {
-  content: "";
+  content: '';
   display: inline-block;
   width: 100%;
 }
 
 .first-letter-big:first-child:first-letter {
   float: left;
-
   font-size: 5.3em; /* or we may use 5.3 X 16px  = 84.8px */
   font-weight: 600;
   line-height: 1;
-  margin: -5px 5px -10px -5px; /* Top Right Bottom Left */ 
+  margin: -5px 5px -10px -5px; /* Top Right Bottom Left */
+}
+.react-select-container {
+  .react-select__control {
+    background-color: var(--bs-body-bg);
+    border-color: var(--bs-gray-300);
+    transition: none;
+    &:hover {
+      border-color: var(--bs-gray-300);
+    }
+  }
+  .react-select__menu {
+    background-color: var(--bs-body-bg);
+    border: 1px solid var(--bs-gray-300);
+  }
+  .react-select__option {
+    background-color: var(--bs-body-bg);
+    &:hover {
+      background-color: var(--bs-gray-300);
+      cursor: pointer;
+    }
+  }
+  .react-select__indicator-separator {
+    background-color: var(--bs-gray-300);
+  }
+  .react-select__placeholder,
+  .react-select__single-value {
+    color: var(--bs-body-color);
+  }
+  .react-select__option {
+    color: var(--bs-body-color);
+  }
+  // .react-select__input {
+  //   caret-color: var(--bs-gray-300);
+  //   color: var(--bs-white);
+
+  //   &:focus {
+  //   color: var(--bs-white);
+  //   border-color: var(--bs-gray-300);
+  //   }
+    
+  // }
 }
